# auto-bartender

./: .gitignore  .gitmodules  README.md  TODO.md  auto-bartender.service  install  package.json  pyproject.toml  run  setup.py  upload.sh
auto_bartender/: hardware.config.json  ingredient.py  run.py
auto_bartender/core/: __init__.py  ingredient.py  ingredients.json  recipe.py  unit.py
auto_bartender/data/: __init__.py  ingredients.json  ingredients.py  recipes.json  recipes.py
auto_bartender/hardware/: __init__.py  controller.py  gpio.py  hx711.py  pump.py  relay.py  weight.py
auto_bartender/routes/: __init__.py  drinks.py  ingredients.py  pumps.py
auto_bartender/server/: .gitignore  __init__.py  app.py  helpers.py
auto_bartender/server/controllers/: app.py  clean.py  ingredient.py  pour.py  pump.py  recipes.py
auto_bartender/server/services/: recipe.py
auto_bartender/server/services/pour/: __init__.py  (+4 more)
docker/: .tag  Dockerfile  build  create_image.sh  run  syslinux.cfg
docker/API/: Dockerfile  bootstrap  build  run
docker/UI/: Dockerfile  bootstrap  build  run
scripts/: autostart  build  install  start
test/: blink.js  cycle.js  package.json  run-single-pin.js  run-single-pin.py  test-gpio.py  test-weight.py
ui/: .babelrc  index.js  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
ui/public/: index.html  index.production.html
ui/src/: index.js
ui/src/api/: base.js  clean.js  ingredients.js  pour-session.js  pumps.js  recipes.js
ui/src/stores/: keyboard.js
ui/src/util/: index.js
(+65 files in other folders)
