[tool.poetry]
name = "auto_bartender"
version = "0.1.0"
description = ""
authors = ["Cassidy <cassidybridges@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-cors = "^3.0.10"
"RPi.GPIO" = "^0.7.0"
hx711 = {path = "hx711py"}
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
